# service-router

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .gitmessage  AGENTS.md  CHANGELOG.md  Cargo.toml  Dockerfile  README.md
.claude/: settings.local.json
.github/compose/: doctor-probe.compose.yml
.github/workflows/: ci.yml  doctor-probe.yml  release-acceptance.yml  release.yml
benches/: proxy_overhead.rs
config/: config.yaml  k8s-validate.yaml  mock-config.yaml  mock-scenarios-sample.yaml  route-explain-request-sample.yaml
docs/: benchmark-baseline.md  check-config-strict-schema.md  ci-copy-paste.sh  ci-template.md  config-schema.json  config-snapshot-workflow.md  config-versioning.md  developer-roadmap-1-2y.md  diagnostic-codes.md  doctor-json-schema.md  doctor-probe-compose.sh  getting-started.md  implementation-status.md  m2-release-readiness.md  metrics-json.md  next-engineering-priorities.md  next-iteration-backlog.md  operations-runbook.md  plugin-dev-guide.md  plugin-extension.md  product-design-one-pager.md  product-design.md  product-prd-developer.md  release-acceptance-matrix.md  release-acceptance.ps1  release-acceptance.sh  release-notes-v0.1-dx.md  route-explain-json-schema.md
docs/adr/: 001-fr6-dynamic-plugins-deferred.md  002-fr6-plugin-sdk-design.md  README.md
docs/regression-archive/: README.md  section-9-summary-template.md  v1.0.0-mock-acceptance.md
scripts/: check-text-encoding.py  post-deploy-smoke.ps1  post-deploy-smoke.sh  summarize-section9-release-acceptance.py  verify-m2-baseline.ps1  verify-m2-baseline.sh
src/: error.rs  lib.rs  main.rs
src/config/: diff.rs  env_resolver.rs  loader.rs  mod.rs  model.rs  strict_check.rs  watcher.rs
src/proxy/: http_proxy.rs  mod.rs  ws_proxy.rs
src/registry/: eureka.rs  factory.rs  k8s.rs  mock.rs  mod.rs  nacos.rs  resolver.rs
src/routing/: matcher.rs  mod.rs  router.rs
src/server/: circuit_breaker.rs  handlers.rs  health_checker.rs  metrics.rs  mod.rs  (+2 more)
tests/: e2e_proxy.rs
tools/: emit_diff_rs.py  emit_strict_check.mjs
